[tool.poetry]
name = "template-python-fastapi"  # Update this to change the name of your app
version = "0.1.0"
authors = []  # Update to include your email
readme = "README.md"
description = "Template for a FastAPI + Uvicorn based webserver project"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
peewee = "^3.17.0"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
